# Agently

./: .gitignore  LICENSE  README.md  README_CN.md  README_node_v1_CN.md  README_node_v1_EN.md  index.js  package.json  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml  publish-on-version-change.yml
Agently/: __init__.py  _global.py  global_plugin_manager.py  requirements.txt
Agently/Agent/: Agent.py  Agent.pyi  AgentFactory.py  __init__.py
Agently/AppConnector/: AppConnector.py  __init__.py
Agently/Facility/: FacilityManager.py
Agently/FastServer/: FastServer.py  __init__.py
Agently/Request/: Request.py
Agently/Stage/: EventEmitter.py  MessageCenter.py  Stage.py  StageFunction.py  StageHybridGenerator.py  StageResponse.py  Tunnel.py  __init__.py
Agently/WebSocket/: WebSocket.py
Agently/Workflow/: Chunk.py  MainExecutor.py  Schema.py  Workflow.py  __init__.py
Agently/utils/: AliasManager.py  DataGenerator.py  DataOps.py  MCPClient.py  PluginManager.py  RuntimeCtx.py  StorageDelegate.py  ToolManager.py  __init__.py  check_version.py  load_json.py  transform.py
Agently/utils/lexer/: LICENSE  __init__.py  lexer.py  lexer_helper.py  lexer_tokens.py  pyproject.toml
agently/: __init__.py  _default_init.py  _default_settings.yaml  _entrypoint.py  base.py
agently/core/: Agent.py  EventCenter.py  ExtensionHandlers.py  ModelRequest.py  ModelResponse.py  ModelResponseResult.py  PluginManager.py  Prompt.py  Session.py  Tool.py  __init__.py  runtime_context.py
demo/: demo.js
docs/: Why-does-AI-application-development-need-a-good-development-framework.md
docs_for_coding_agent/: README.md
examples/: agent.py  auto_func_decorator.py  basic_request.py  cheatsheet_for_coding_agent_en.txt  cheatsheet_for_coding_agent_zh.txt  deepseek_reasoning.ipynb  instant_and_console.py  instant_for_mutiple_list_items.py  key_waiter_agent.py  mcp_agent.py  minimax_demo.py  planning_loop_demo.py  prompt_mappings.py  streaming_print.py  tool_agent.py  web_socket.py
lib/: Agent.js  Agently.js  LLM.js  LLM_PRESET.js  Memory.js  Options.js  ProcessUnit.js  Skills.js  SmartPrompt.js  Tools.js  format.js
playground/: NPC_in_game_generate_choices_using_google_gemini.ipynb  README.md  SQL_generator.py  character_change_behaviours_according_mood_status.ipynb  concurrency_and_asynchornous_dependency.ipynb  constrast_between_Agently_workflow_and_LangGraph.ipynb  contrast_between_Agently_workflow_and_LangGraph.ipynb  create_event_listeners_with_alias_or_decorator.ipynb  finding_connectable_pairs_from_text_tailers_and_headers.ipynb  function_calling.py  generate_agent_powered_function_in_runtime_using_decorator.ipynb  human_step_in_before_reply.ipynb  long_text_to_qa_pairs.ipynb  mimir.py  open_source_navigator_agent-Wang_Yafang.ipynb  planner_workflow.py  predict_data_according_given_data_set.ipynb  routing_to_different_agent_group_for_users_with_different_authorities.ipynb  simple_role_play.py  sql_generator.ipynb  story_maker.py  stream_output_in_streamlit.py  survey_agent_asks_questions_according_form.ipynb  teacher_with_search_ability_for_kids.ipynb  test_run_template.ipynb  using_local_open_source_model_to_drive_agents.ipynb  using_tools_to_enhance_your_agent.ipynb  web_socket.py  workflow.py  workflow_gernerate_code.py  workflow_series_01_building_a_multi_round_chat.ipynb  workflow_series_02_using_condition_to_branch_off.ipynb  workflow_series_03_using_decorator_to_create_chunks.ipynb  workflow_series_04_draw_a_workflow_graph.ipynb  workflow_series_05_seperating_generation_steps_and_reply_in_every_step.ipynb  writing_ad_copies_according_image.ipynb  线上快速试用模板.ipynb
preset/: LLM.js  prefix.js
skills/: README.md
src/: __init__.py  _global.py  env_box_beta.py  requirements.txt
tests/: test_main_package.py
(+511 files in other folders)
